# ColorSwitcher

./: .gitignore  CMakeLists.txt  README.md
resources/: app.manifest  app.rc
src/: autostart.cpp  autostart.h  config_manager.cpp  config_manager.h  foreground_watcher.cpp  foreground_watcher.h  gamma_engine.cpp  gamma_engine.h  main.cpp  nvapi_controller.cpp  nvapi_controller.h  preset_editor.cpp  preset_editor.h  resource.h
